--- a/src/app/components/courses/courses.component.html
+++ b/src/app/components/courses/courses.component.html
@@ -1,7 +1,15 @@
-
+<div class="row mt-5">
+   @for(course of courses; track $index) { 
+    <div class="col-lg-4 mb-4">
   <div class="box">
-    <div style="text-align: center" class="course-image">
+    <div style="text-align: center" class="course-image">     
       <img [src]="course.image" alt="Courses Banner" />
+
+      @if(isAdmin) {
+        <button class="btn btn-danger" (click)="deleteCourse(course)">
+          <i class="bi bi-trash-fill"></i>
+        </button>
+        }
     </div>
 
     <h5 class="mt-3">{{course?.title}}</h5>
@@ -9,4 +17,6 @@
       {{course.description}}
     </p>
   </div>
-
+</div>
+   }
+</div>
