--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,6 +15,9 @@
           <li class="nav-item font-bold">
             <a class="nav-link" routerLink="/admin" >Admin</a>
           </li>
+          <li class="nav-item font-bold">
+            <a class="nav-link" routerLink="/courses" >Courses</a>
+          </li>
         </ul>
       </div>
     </div>
