--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -13,7 +13,7 @@
         <h1 class="text-center">All Courses</h1>
     </div>
 
-    <div class="row mt-5">
+    <!-- <div class="row mt-5">
         <div class="row mt-3">
             @for(course of courses; track $index){
                 <div class="col-lg-3">
@@ -21,6 +21,8 @@
                 </div>
             }
           </div>
-    </div>
+    </div> -->
+
+    <app-courses></app-courses>
     
 </section>
