implemented crud and toaster and css fixes

--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -45,7 +45,7 @@
         </div>
       </div>
       <div>
-        <label for="image">Choose an image:</label>
+        <label for="image" class="form-label">Choose an image:</label>
         <input
           type="file"
           id="image"
