--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,8 +3,8 @@
 
     <div class="main-content">
         <h1 class="mt-2">Explore Amazing <br> Content</h1>
-        <a href="" class="btn btn-primary btn-lg mt-2">Courses</a> &nbsp;
-        <a href="" class="btn btn-lg btn-light mt-2">Templates</a>
+        <a href="/courses" class="btn btn-primary btn-lg mt-2">Courses</a> &nbsp;
+        <a href="/admin" class="btn btn-lg btn-light mt-2">Templates</a>
     </div>
 </section>
 
