--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -18,14 +18,14 @@
         </div>
         <div class="col-md-4 my-3">
           <h5>Newsletter</h5>
-          <form class="form-inline newsletter justify-content-center justify-content-md-start">
+          <form class="form-inline newsletter justify-content-center justify-content-md-start mt-4">
             <input type="email" class="form-control" placeholder="Enter your email">
             <button type="submit" class="btn btn-primary mt-3">Subscribe</button>
           </form>
         </div>
       </div>
       <div class="mt-3 text-center">
-        <p>&copy; 2024 Code with Technyks. All Rights Reserved.</p>
+        <p>&copy; 2024. All Rights Reserved.</p>
       </div>
     </div>
   </footer>
