--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,16 +7,16 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto me-5 mb-2 mb-lg-0">
           <li class="nav-item font-bold">
-            <a class="nav-link active" aria-current="page" routerLink="/"  >Home</a>
+            <a class="nav-link active" aria-current="page" routerLink="/">Home</a>
           </li>
-          <li class="nav-item font-bold mx-4">
-            <a class="nav-link" routerLink="/about" >About</a>
+          <li class="nav-item font-bold px-2">
+            <a class="nav-link" routerLink="/about">About</a>
           </li>
-          <li class="nav-item font-bold">
-            <a class="nav-link" routerLink="/admin" >Admin</a>
+          <li class="nav-item font-bold px-2">
+            <a class="nav-link" routerLink="/admin">Admin</a>
           </li>
-          <li class="nav-item font-bold">
-            <a class="nav-link" routerLink="/courses" >Courses</a>
+          <li class="nav-item font-bold px-2">
+            <a class="nav-link" routerLink="/courses">Courses</a>
           </li>
         </ul>
       </div>
