--- a/src/styles.css
+++ b/src/styles.css
@@ -3,3 +3,4 @@
 
 @import 'bootstrap/dist/css/bootstrap.min.css';
 @import 'bootstrap-icons/font/bootstrap-icons.css';
+@import 'ngx-toastr/toastr';
