--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -9,19 +9,19 @@
       <div class="row mt-5">
         <div class="col-md-4">
           <img
-            src="imgs/nikhil.png"
+            src="assets/avatar1.jpg"
             class="rounded-circle"
             alt="Team Member 1"
             width="150"
             height="150"
           />
-          <h4>Nikhil Agarwal</h4>
+          <h4>Andy </h4>
           <p>CEO & Founder</p>
         </div>
   
         <div class="col-md-4">
           <img
-            src="imgs/avatar.jpg"
+            src="assets/avatar2.jpg"
             class="rounded-circle"
             alt="Team Member 2"
             width="150"
@@ -33,7 +33,7 @@
   
         <div class="col-md-4">
           <img
-            src="imgs/avatar1.jpg"
+            src="assets/avatar3.jpg"
             class="rounded-circle"
             alt="Team Member 3"
             width="150"
