--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -9,7 +9,7 @@
         </div>
         <div class="col-md-4 my-3">
           <h5>Follow Us</h5>
-          <div class="social-icons">
+          <div class="social-icons pt-2">
             <a class="bi bi-facebook ms-2 me-2" aria-label="Facebook" href="#"></a>
             <a class="bi bi-twitter ms-2 me-2" aria-label="Twitter" href="#"></a>
             <a class="bi bi-instagram ms-2 me-2" aria-label="Instagram" href="#"></a>
